--- a/app/public/stylesheets/forms/log_in.css
+++ b/app/public/stylesheets/forms/log_in.css
@@ -1,10 +1,10 @@
 
-div.sign-up-form {
+div.log-in-form {
   width: 100%;
   height: 100%;
 }
 
-form.sign-up-form {
+form.log-in-form {
   width: 400px;
   height: 200px;
   margin: auto;
@@ -12,13 +12,13 @@ form.sign-up-form {
   padding-bottom: 5px;
 }
 
-label.sign-up-form {
+label.log-in-form {
   width: 150px;
   margin-left: 20px;
   display: inline-block;
 }
 
-input.sign-up-form {
+input.log-in-form {
   width: 200px;
   display: inline-block;
 }
