--- a/app/views/forms/log_in.ejs
+++ b/app/views/forms/log_in.ejs
@@ -4,7 +4,7 @@
 <div class="log-in-form">
   <form class="log-in-form" action="/auth/log_in" method="post">
     <center>
-      <h2>Sign Up</h2>
+      <h2>Log In</h2>
     </center>
     <label class="log-in-form" for="email">Email:</label>
     <input class="log-in-form" type="text" name="email" />
