--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,8 +3,9 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
-    
+    <%- include('forms/auth_tabs') %>
   </body>
 </html>
