--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,6 +6,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
-    <%- include('forms/auth_tabs') %>
+    <div>
+      <%- include('forms/auth_tabs') %>
+    </div>
   </body>
 </html>
