--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,7 +7,10 @@
   </head>
   <body>
     <div>
-      <%- include('forms/auth_tabs') %>
+      <%- include('templates/header') %>
+    </div>
+    <div>
+      <%- include(feature) %>
     </div>
   </body>
 </html>
