cleaned up javascript

--- a/app/views/forms/log_in.ejs
+++ b/app/views/forms/log_in.ejs
@@ -10,7 +10,7 @@
     <input class="log-in-form" type="text" name="email" />
     <br /><br />
     <label class="log-in-form" for="password">Password:</label>
-    <input class="log-in-form" type="text" name="password" />
+    <input class="log-in-form" type="password" name="password" />
     <br /><br />
     <center>
       <input class="log-in-form-submit" type="submit" value="submit" name="submit" />
