--- a/app/views/forms/sign_up.ejs
+++ b/app/views/forms/sign_up.ejs
@@ -10,10 +10,10 @@
     <input class="sign-up-form" type="text" name="email" />
     <br /><br />
     <label class="sign-up-form" for="password">Password:</label>
-    <input class="sign-up-form" type="text" name="password" />
+    <input class="sign-up-form" type="password" name="password" />
     <br /><br />
     <label class="sign-up-form" for="password-confirm">Confirm Password:</label>
-    <input class="sign-up-form" type="text" name="password-confirm" />
+    <input class="sign-up-form" type="password" name="password-confirm" />
     <br /><br />
     <center>
       <input class="sign-up-form-submit" type="submit" value="submit" name="submit" />
