--- a/app/views/listings.ejs
+++ b/app/views/listings.ejs
@@ -1,7 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>yeah</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+
+hello, this is a test!
