listing links description

--- a/app/views/test.ejs
+++ b/app/views/test.ejs
@@ -13,9 +13,11 @@
       <div>
         <button><a href = "/listings/<%=listing.id%>">
              <%= listing.name %>
+             <br />
+             <%= listing.description %>
         </button>
     </div>
 
-    <br>
+    <br />
 <% }) %>
 </center>
