adding listings id page

--- a/app/views/test.ejs
+++ b/app/views/test.ejs
@@ -4,6 +4,9 @@
 <div class="listings-wrapper">
   <center>
     <h1>Current Listings</h1>
+    <form action='/listings/new' method ='GET'>
+      <input type='submit' value='List a Space'>
+    </form>
   </center>
 </div>
 
