--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel="stylesheet" type="text/css" href="stylesheets/index.css"  />
+<link href="stylesheets/dcalendar.picker.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
