--- a/app/views/listings.ejs
+++ b/app/views/listings.ejs
@@ -1,5 +1,5 @@
 <!-- <script type="text/javascript" src="javascripts/viewListings.js"></script> -->
-
+<!--
 <script>
 function buildListings(listings) { console.log(listings);
   string = '';
@@ -26,4 +26,4 @@ listings.forEach(function(item) {
     <h1>Current Listings</h1>
   </center>
   <table class="listings" id="listings"></table>
-</div>
+</div> -->
