fixed bug in index and changed spaces to listings

--- a/app/views/templates/header.ejs
+++ b/app/views/templates/header.ejs
@@ -1,5 +1,6 @@
 
-<script type="text/javascript" src="javascripts/mainMenu.js"></script>
+<script type="text/javascript" src="/javascripts/mainMenu.js"></script>
+<link rel="stylesheet" type="text/css" href="/stylesheets/templates/header.css"  />
 
 <script>
  $(document).ready(function(){
@@ -7,6 +8,5 @@
  });
 </script>
 
-<link rel="stylesheet" type="text/css" href="stylesheets/templates/header.css"  />
 
 <nav id = "main_menu"></nav>
