--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/index.css"  />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index.css"  />
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
