--- a/app/views/listing.ejs
+++ b/app/views/listing.ejs
@@ -9,18 +9,24 @@
 
 
 <div>
+<center>
 <h1><%= listing.name %></h1>
        <br />
        <%= listing.description %>
+</center>
 </div>
 
+<center>
 <h2>Pick a Night:</h2>
 
 <%= listing.name %> is available from <%= listing.startDate %> until <%= listing.endDate %>
+</center>
 
 <div>
   <center>
     <input type="text" id="datepicker"/>
+    <input type="hidden" id="datefrom" value=2017-09-08 />
+    <input type="hidden" id="dateto" value=2017-09-15 />
     <br/>
     <br/>
     <form action='/listings/requests' method ='POST'>
