--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -12,7 +12,9 @@
     </div>
     <div class="feature-wrapper">
       <div class="feature">
-        <%- include(feature) %>
+        <center>
+          <%- include(feature) %>
+        </center>
       </div>
     </div>
   </body>
